# ProjExD_Group09

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  test_font.py
.github/: issue-labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_epic.yml  02_story.yml  03_task.yml  04_bug.yml  05_experiment.yml  06_docs.yml  config.yml
.github/workflows/: ci.yml
combat/: __init__.py  boss_enemy.py  effects.py  fighter_skills.py  special_enemy.py  test_combat.py  weapon_selector_ui.py  weapons.py
core/: __init__.py  base_enemy.py  base_hud.py  base_player.py  base_tower.py  builder.py  bullet.py  client_game.py  constants.py  fighter.py  fonts.py  fortress.py  game.py  host_game.py  menu.py  settings.py  solo_game.py  test_evolution_integration.py  test_host_client.py  test_menu.py  test_settings.py  test_solo_game.py  wave_manager.py  world.py
docs/: DESIGN.md  ISSUE_LABELS.md  LABEL_SETUP.md  difficulty.md
evolution/: __init__.py  evolution_driver.py  evolution_manager.py  evolved_enemy.py  neural_net.py  test_evolution.py  tune_parameters.py
network/: __init__.py  net_client.py  net_protocol.py  net_server.py  state_buffer.py  test_network.py
presentation/: __init__.py  evolution_graph.py  extended_hud.py  sound_manager.py  test_presentation.py  tutorial.py  versus_mode.py
scripts/: add_docstrings.py  sync_issue_labels.py  test_add_docstrings.py
towers/: __init__.py  fire_tower.py  ice_tower.py  lightning_tower.py  physical_tower.py  test_towers.py  tower_selector_ui.py  tower_upgrade.py
(+69 files in other folders)
